--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "@kane-cli/utils",
-  "version": "1.0.2",
-  "description": "kane-cli utils",
-  "author": "tom <odinzero@outlook.com>",
-  "homepage": "",
-  "license": "ISC",
-  "main": "lib/utils.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
-  "scripts": {
-    "test": "node ./__tests__/utils.test.js"
-  },
-  "publishConfig": {
-    "access": "public"
-  }
+	"name": "@kane-cli/utils",
+	"version": "1.0.2",
+	"description": "kane-cli utils",
+	"author": "tom <odinzero@outlook.com>",
+	"homepage": "",
+	"license": "ISC",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"scripts": {
+		"dev": "tsc -b -w",
+    "build": "tsc -b",
+		"clean": "rimraf tsconfig.tsbuildinfo dist"
+	},
+	"publishConfig": {
+		"access": "public"
+	},
+	"dependencies": {
+		"typescript": "^4.9.5"
+	}
 }
