如果要读取package.json，需要修改配置

--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -5,9 +5,9 @@
 	"author": "tom <odinzero@outlook.com>",
 	"homepage": "",
 	"license": "ISC",
-	"main": "dist/core.js",
+	"main": "dist/src/index.js",
 	"bin": {
-		"kane-cli": "dist/index.js"
+		"kane-cli": "dist/src/index.js"
 	},
 	"scripts": {
 		"dev": "tsc -b -w",
