--- a/core/cli/tsconfig.json
+++ b/core/cli/tsconfig.json
@@ -3,8 +3,11 @@
 	"compilerOptions": {
 		"composite": true,
 		"outDir": "dist",
-		"rootDir": "src",
+		"rootDir": ".",
+		"resolveJsonModule": true,
+		"esModuleInterop": true,
 		"types": ["node"]
 	},
-	"include": ["src"]
+	"include": ["src","package.json"],
+	"exclude": ["*.tsbuildinfo"]
 }
