当相互依赖的时候，只能watch本地项目

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,6 @@
 packages:
-  - "commands/*"
-  - "core/*"
-  - "models/*"
-  - "utils/*"
-  - "!**/test/**"
+  - 'commands/*'
+  - 'utils/*'
+  - 'core/*'
+  - 'models/*'
+  - '!**/test/**'
